[package]
name = "versions"
version = "6.2.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
description = "A library for parsing and comparing software version numbers."
homepage = "https://github.com/fosskers/rs-versions"
repository = "https://github.com/fosskers/rs-versions"
readme = "README.md"
license = "MIT"
keywords = ["version", "compare", "semantic"]
categories = ["parser-implementations"]

[dependencies]
itertools = "0.12"
nom = "7.1"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
version-sync = "0.9"
semver = "1.0"
semver-parser = "0.10"
serde_json = "1.0"
